--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  height: 30px;
+  height: 70px;
   background-color: #ebeae8;
   display: flex;
   justify-content: center;
@@ -9,14 +9,22 @@
   padding: 20px;
   position: absolute;
   bottom: 0;
+
   z-index: 1;
+}
+
+.socialMedia {
+  display: flex;
+  justify-content: center;
+}
+
+.socialMedia a {
+  margin: 0 20px;
 }
 
 .socialMedia svg {
   color: black;
-  margin-top: 30px;
   font-size: 30px;
-
   cursor: pointer;
 }
 
