--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,6 +3,7 @@
   height: 100px;
   background-color: #ebeae8;
 }
+
 .links {
   width: 100%;
   height: 100%;
@@ -14,10 +15,28 @@
 
 .navbar a {
   text-decoration: none;
-  color: black;
+  color: #3f3f3f;
   font-size: 20px;
   margin: 0 20px;
-  /* transition: all 0.3s ease-in-out; */
+  position: relative;
+  transition: all 0.3s ease-in-out;
+}
+
+.navbar a::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 2px;
+  background-color: #3f3f3f;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out;
+}
+
+.navbar a:hover::after,
+.navbar a.active::after {
+  transform: scaleX(1);
 }
 
 .toggleButton {
