--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -15,7 +15,7 @@
 
 .navbar a {
   text-decoration: none;
-  color: #3f3f3f;
+  color: #444444;
   font-size: 20px;
   margin: 0 20px;
   position: relative;
