--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,16 +1,14 @@
 .footer {
+  bottom: 0;
   width: 100%;
-  height: 70px;
+  height: 50px;
   background-color: #ebeae8;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 20px;
-  position: absolute;
-  bottom: 0;
-
-  z-index: 1;
+  padding-top: 10px;
+  margin-top: 200px;
 }
 
 .socialMedia {
