--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -6,6 +6,7 @@
   align-items: center;
   flex-direction: column;
 }
+
 .projects .projectTitle {
   text-align: center;
   color: #3e497a;
@@ -30,6 +31,7 @@
   margin: 40px;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   text-align: center;
+  position: relative;
 }
 .projectItem:hover {
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
@@ -49,6 +51,11 @@
 
 .projectItem h1 {
   font-size: 25px;
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  width: 100%;
 }
 
 @media only screen and (max-width: 1300px) {
