--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -25,13 +25,13 @@
 .navbar a::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: -2px;
   left: 0;
   right: 0;
-  height: 2px;
+  height: 0.5px;
   background-color: #3f3f3f;
   transform: scaleX(0);
-  transition: all 0.3s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .navbar a:hover::after,
